Ensure display is exactly the viewport and not more, collapse settings menu to button

--- a/src/style/partials/_base.scss
+++ b/src/style/partials/_base.scss
@@ -7,8 +7,8 @@
 .main {
   height: 100vh;
   min-height:600px;
-  margin-left:10px;
-  margin-right:10px;
+  // margin-left:10px;
+  // margin-right:10px;
 }
 
 .alert{
@@ -42,7 +42,7 @@
 }
 
 .map-view {
-  min-height: 300px;
+  min-height: 500px;
   .map {
     width:100%;
     height:100%;
@@ -90,29 +90,21 @@
 
   @include media-breakpoint-up(sm) {
     .model-detail {
-      height:70%;
-    }
-
-    .settings-detail {
-      height:30%;
+      height:100%;
     }
   }
 
   @include media-breakpoint-down(sm) {
     .model-detail {
-      min-height:300px;
-      max-height:400px;
-    }
-
-    .settings-detail {
-      height:250px;
+      // min-height:400px;
+      height:500px;
     }
   }
 
   .info-content {
     width:100%;
     height:100%;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-left: 5px;
     padding-right: 5px;
   }
